fixed services spacing error

--- a/index.css
+++ b/index.css
@@ -293,39 +293,43 @@ section p {
   opacity: 1;
 }
 
-.graphic-design {
+.service{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
   background: url('./images/mobile/image-graphic-design.jpg') no-repeat;
-  height: 70vh;
+  background-position: center center;
   background-size: cover;
-  background-position: center;
-  padding-bottom: var(--spacer-lg);
-  font-size: 0.9rem;
   color: var(--design-font-clr);
+  width: 100%;
+  height: 33rem;
+  padding-bottom: 3.3rem;
+  font-size: 0.9rem;
 }
 
-.graphic-design h2 {
+.service h2 {
   padding-top: 0;
   padding-bottom: var(--spacer); 
   font-size: 1.75rem;
 }
 
-.graphic-design p {
+.service p{
   color: var(--design-font-clr);
 }
 
 .photography {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-end;
   background: url('./images/mobile/image-photography.jpg') no-repeat;
-  height: 70vh;
+  background-position: center center;
   background-size: cover;
-  background-position: center;
-  padding-bottom: var(--spacer-lg);
+  color: var(--design-font-clr);
+  width: 100%;
+  height: 33rem;
+  padding-bottom: 3.3rem;
   font-size: 0.9rem;
 }
 
@@ -341,6 +345,7 @@ section p {
 }
 
 .testimonials {
+  margin-top: var(--spacer-lg);
   margin-bottom: var(--spacer-lg);
 }
 
@@ -431,7 +436,7 @@ footer a {
 }
 
 @media screen and (min-width: 535px){
-  .graphic-design p {
+  .service p {
     padding: 1.5rem;
   }
 
@@ -545,12 +550,12 @@ footer a {
     text-align: left;
   }
 
-  .col img{
-    order: 2; 
+  .col h2, .col-audience h2 {
+    padding-left: 8rem;
   }
 
-  section h2 {
-    padding: 0 8rem 0 8rem;
+  .col img{
+    order: 2; 
   }
 
   .learn {
@@ -561,25 +566,30 @@ footer a {
     padding: 0 8rem 0 8rem;
   }
 
-  .graphic-design{
+  .service{
     background: url('./images/desktop/image-graphic-design.jpg') no-repeat;
-    min-height: 90vh;
-    width: 50vw;
-  }
-
-  .graphic-design p {
-    padding: 0 8rem 8rem 8rem;
+    background-position: center;
+    background-size: cover;
+    font-size: 1rem;
   }
 
   .photography {
     background: url('./images/desktop/image-photography.jpg') no-repeat;
-    min-height: 90vh;
-  }
-  
-  .photography p {
-    padding: 0 8rem 9.5rem 8rem;
+    background-position: center;
+    background-size: cover;
   }
 
+  .service, .photography {
+    padding-bottom: var(--spacer-md);
+  }
+  .service h2, .photography h2 {
+    padding-bottom: 0;
+  }
+
+  .service p, .photography p{
+    max-width: 24rem;
+  }
+  
   .clients {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
